--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <style>
@@ -8,10 +9,11 @@
             }
             .res {
                 height: 150px;
-                font-size: 4em;
+                font-size: 6em;
                 font-weight: 800;
                 padding-top: 50px;
                 vertical-align: middle;
+                font-family: Georgia, serif;
                 color: #ee3d3d;
             }
             .ana {
@@ -244,7 +246,7 @@
                 sp.style.display = 'none';
                 res.style.display = 'block';
                 // ic.style.display = 'block';
-                res.innerHTML = 'Não pode!';
+                res.innerHTML = 'NÃO';
 
                 var d = new Date();
                 var date = d.toLocaleDateString();
