--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
             }
 
-            var ts = 30; // 100;
+            var ts = 100;
 
             setTimeout(function(){
                 pusher( 'Analizando a densidade geográfica local' );
